--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "better-auth": "^1.4.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
